--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,39 @@
-/dist
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Database
+*.sqlite
+*.sqlite-journal
+
+# Build directories
+dist/
+build/
+
+# Cache
+.cache/
+.npm
+
+# IDE
+.idea/
+.vscode/
+
+# OS
 .DS_Store
-/uploads
-/node_modules
-yarn-error.log
-
-.idea
-
-coverage
-
-!src/**
-
-./tsconfig.tsbuildinfo
-medusa-db.sql
-build
-.cache
-
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
-
-.medusa
+Thumbs.db
