--- a/package.json
+++ b/package.json
@@ -36,16 +36,25 @@
   "devDependencies": {
     "@medusajs/test-utils": "2.8.8",
     "@mikro-orm/cli": "6.4.3",
+    "@segment/analytics-next": "^1.81.1",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
+    "css-loader": "^7.1.2",
     "jest": "^29.7.0",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-nestable": "^3.0.2",
+    "react-table": "^7.8.0",
+    "style-loader": "^4.0.0",
+    "swc-loader": "^0.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
